# search-images-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
front-ui/: Cargo.toml  index.html
front-ui/src/: main.rs
search-image/: Cargo.toml
search-image/src/: app.rs  config.rs  database.rs  error.rs  extractor.rs  lib.rs
search-images-core/: Cargo.toml
search-images-core/src/: app.rs  config.rs  database.rs  error.rs  extractor.rs  utils.rs
slint-ui/: Cargo.toml
slint-ui/src/: app_state.rs  extractor_async.rs  lib.rs  main.rs  types.rs
slint-ui/src/handlers/: feature_handler.rs  file_handler.rs  mod.rs  ui_handler.rs
slint-ui/ui/: main.slint
src/: configration.rs  error.rs  extractor.rs  lib.rs  response.rs  state.rs  utils.rs
web-sever/: Cargo.toml
web-sever/src/: configration.rs  error.rs  lib.rs  state.rs
