[package]
name = "search-images-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
accelerate = ["candle-transformers/accelerate"]
cuda = ["candle-transformers/cuda"]
cudnn = ["candle-transformers/cudnn"]
mkl = ["candle-transformers/mkl"]

# 如果目标平台是 Apple Silicon，则启用 accelerate 特性
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-transformers = { version = "0.9.1", features = ["accelerate"] }

[dependencies]
candle-core = "0.9.1"
candle-transformers = "0.9.1"
config = { version = "0.15.11", features = ["toml"] }
image = "0.25.6"
qdrant-client = "1.14.0"
salvo = { version = "0.79.0", features = ["affix-state", "rustls", "timeout"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
