[workspace]
resolver = "3"
members = [".", "front-ui", "search-image", "web-sever"]

[workspace.package]
authors = ["tangxiangong <tangxiangong@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
config = { version = "0.15.11", features = ["toml"] }
hf-hub = { version = "0.4.3", default-features = false, features = [
    "ureq",
    "rustls-tls",
] }
image = "0.25.6"
qdrant-client = "1.14.0"
salvo = { version = "0.79.0", features = ["affix-state", "rustls", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
thiserror = "2"
rayon = "1"
cfg-if = "1"
uuid = { version = "1.14.0", features = ["v4"] }
leptos = { version = "0.8.2", features = ["rustls", "csr"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
