[package]
name = "search-image"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
config = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
qdrant-client = { workspace = true }
cfg-if = { workspace = true }
# 如果目标平台是 Apple Silicon，则启用 accelerate 特性
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-transformers = { workspace = true, features = ["accelerate"] }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
default = []
rayon = ["dep:rayon"]
cuda = ["candle-transformers/cuda"]
cudnn = ["candle-transformers/cudnn"]
mkl = ["candle-transformers/mkl"]
