[package]
name = "slint-ui"
version.workspace = true
edition.workspace = true

[dependencies]
slint = { workspace = true }
tokio = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# 使用本地的 search-image crate
search-image = { path = "../search-image" }
candle-core = { workspace = true }

[build-dependencies]
slint-build = "1.5"
